...
    <string name="error_occured_try_later">Error occurred.Try after some time</string>
    <string name="pleasewait">Please wait&#8230;</string>
    <string name="loading">Please wait&#8230;</string>
    <string name="load_more">More</string>
    <string name="loading_">Loading&#8230;</string>
    <string name="more">More</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="invalid_username_password_please_contact">Your username and or password is invalid. \n\n Please contact:</string>
    <!-- Loading&#8230; -->
    <string name="no_connection">No connection</string>
    <string name="no_data">No data</string>
    <string name="no_item_to_select">No item to select</string>
...
    <string name="highest_bider">You are already the highest bidder.</string>
    <string name="disableautobidmessage">Your automated bidding is disable</string>
    <string name="maximum_bid">Maximum Bid</string>
    <string name="bid_limit">Bid Limit</string>

    <!-- todo item -->
    <string name="done">Done</string>
    <string name="comment">Comments:</string>
    <string name="comment_recommended">Comments (Recommended)</string>
    <string name="reject">Reject</string>
    <string name="no_can_do">No Can Do</string>
    <string name="accept_close">Accept &amp; Close</string>
    <string name="label">Label</string>
...
    <string name="are_you_sure_you_want_to_delete_this_vehicle">Are you sure you want to delete this vehicle?</string>
    <string name="please_select_min_year">Please select start year</string>
    <string name="please_select_max_year">Please select end year</string>

    <!-- multiple image -->
    <string name="tap_to_add_caption">Tap to add caption</string>
    <string name="btn_ok">OK</string>
    <string name="btn_pick">Pick From Gallery</string>
    <string name="btn_pick_mul">Pick From Gallery (Multiple)</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>

    <!-- crop menu -->
...

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Log in</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="authenticating">Authenticating&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
...
    <string name="price_ascending">Price (Ascending)</string>
    <string name="select_image_from_device_folders">Please select image</string>
    <string name="upload_image">Select profile photo</string>
    <string name="failed_please_pick_image">Please pick image</string>
    <string name="please_select_image_source">Please select the image source</string>
    <string name="camera">Select from Camera</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="replace_photo_profile">Replace Profile Photo</string>
    <string name="customise_broucher">Personalise your eBrochure with a profile photo.</string>
    <string name="upload_profile_picture">Upload Profile Photo</string>
    <string name="stock_summary">Stock Summary</string>
    <string name="last_stock_import">Last Stock Import</string>
    <string name="last_manual_update">Last Manual Update</string>
    <string name="used">Used</string>
    <string name="vehicle">Veh\'s</string>
    <string name="pics">Pics</string>
    <string name="vid">Videos</string>
    <string name="manual">Man*</string>
    <string name="active">Active</string>
    <string name="total">Total</string>
...
