<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <include
        layout="@layout/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <GridView
            android:id="@+id/gridGallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="-10dp"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="-10dp"
            android:layout_marginTop="-10dp"
            android:horizontalSpacing="-15dp"
            android:numColumns="3"
            android:padding="0dp"
            android:scrollbars="none"
            android:verticalSpacing="-15dp"
            tools:listitem="@layout/gallery_item">
        </GridView>

        <ImageView
            android:id="@+id/imgNoMedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/no_media"
            android:visibility="gone"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/llBottomContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnGalleryOk"
            style="@style/btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_sel"
            android:text="@string/btn_ok"/>
    </LinearLayout>

</LinearLayout>