...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:weightSum="3.0" >

        <com.nw.widget.CustomTextView
            android:id="@+id/tvRegNumber"
            style="@style/SingleLineWhiteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="Register number" />

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:weightSum="3.0" >

        <com.nw.widget.CustomTextView
            android:id="@+id/tvDepartment"
            style="@style/SingleLineWhiteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="Used" />

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:weightSum="4.0" >

        <com.nw.widget.CustomTextViewLight
            android:id="@+id/tvExtras"
            style="@style/SingleLineWhiteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="Extras"
            android:textSize="@dimen/photos_extras_text_size" />
...
