...

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/llLoginContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:orientation="vertical" >

...
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress" />

                <com.nw.widget.CustomEditText
                    android:id="@+id/password"
                    style="@style/SingleLineEdittextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_password"
...
                        android:text="@string/forgot_login_details"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/white"
                        android:visibility="gone" />

                    <com.nw.widget.CustomButton
                        android:id="@+id/sign_in_button"
                        style="@style/BlueButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
...
